# arcanum

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
arcanum/: __init__.py  _logging.py  cli.py
arcanum-tui/: Cargo.toml
arcanum-tui/src/: action.rs  app.rs  error.rs  event.rs  main.rs
arcanum-tui/src/ui/: dashboard.rs  footer.rs  header.rs  mod.rs  seer.rs  theme.rs  tome.rs
