[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcanum"
version = "0.1.0"
description = "The complete domain intelligence suite — Seer, Tome, Tower, Scrolls, and Familiar, unified"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zac Roach" }]
dependencies = []

[project.optional-dependencies]
# seer/tome: installs PyO3 Python bindings only; CLI dispatch must locate
#   the Rust binary via shutil.which (e.g. `cargo install --path seer/seer-cli`)
seer = ["seer>=0.13.0"]
tome = ["tome>=0.1.0"]
# tower: entry point is `tower-mcp`, not `tower` — dispatch accordingly
tower = ["tower>=0.1.0"]
# scrolls: no CLI exists; subcommand must use the Python API directly
scrolls = ["scrolls>=0.1.0"]
# familiar: requires Python 3.11+ (the only component with that constraint)
familiar = ["familiar>=0.1.0"]
all = [
    "seer>=0.13.0",
    "tome>=0.1.0",
    "tower>=0.1.0",
    "scrolls>=0.1.0",
    "familiar>=0.1.0",
]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
arcanum = "arcanum.cli:_entry_point"

[tool.hatch.build.targets.wheel]
packages = ["arcanum"]

# Local dev sources — point UV at sibling project directories
[tool.uv.sources]
seer = { path = "../seer/seer-py", editable = true }
tome = { path = "../tome/tome-py", editable = true }
tower = { path = "../tower", editable = true }
scrolls = { path = "../scrolls", editable = true }
familiar = { path = "../familiar", editable = true }

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["arcanum"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
