[package]
name = "arcanum-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal user interface for the Arcanum domain intelligence suite"
keywords = ["tui", "terminal", "domain", "dns", "whois"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "arcanum-tui"
path = "src/main.rs"

[dependencies]
seer-core = { workspace = true }
tome-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
